[project]
name = "weather"
version = "0.1.0"
description = ""
authors = [
    {name = "ozgurberkeakyol",email = "ozgurba99@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "asgiref==3.8.1",
    "atomicwrites==1.4.1",
    "attr==0.3.2",
    "brotli==1.1.0",
    "brotlicffi==1.1.0.0",
    "cdifflib==1.2.9",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "colorama==0.4.6",
    "ConfigParser==7.2.0",
    "cryptography==44.0.2",
    "curio==1.6",
    "docutils==0.21.2",
    "exceptiongroup==1.2.2",
    "fastimport==0.9.14",
    "gevent==24.11.1",
    "geventhttpclient==2.3.3",
    "gpg==1.10.0",
    "h2==4.2.0",
    "HTMLParser==0.0.2",
    "importlib_metadata==8.6.1",
    "importlib_resources==6.5.2",
    "interegular==0.3.3",
    "ipython==9.0.2",
    "ipywidgets==8.1.5",
    "jnius==1.1.0",
    "js==1.0",
    "js2py==0.74",
    "numpy==2.2.3",
    "outcome==1.3.0.post0",
    "paramiko==3.5.1",
    "Pillow==11.1.0",
    "pluggy==1.5.0",
    "protobuf==6.30.0",
    "pydot==3.0.4",
    "PyInstaller==6.12.0",
    "pyodide==0.0.2",
    "pyOpenSSL==25.0.0",
    "pytest==8.3.5",
    "python-dotenv==1.0.1",
    "redis==5.2.1",
    "regex==2024.11.6",
    "secretstorage==3.3.3",
    "setuptools==76.0.0",
    "shtab==1.7.1",
    "simplejson==3.20.1",
    "socksio==1.0.0",
    "Sphinx==8.2.3",
    "urllib3_secure_extra==0.1.0",
    "uv==0.6.6",
    "uvloop==0.21.0",
    "watchdog==6.0.0",
    "xattr==1.1.4",
    #"xmlrpclib==1.0.1"

]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
